src/test/ui/rust-2018/async-ident-allowed.stderr
error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident-allowed.rs:9:9
   |
LL |     let async = 3;
   |         ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
note: lint level defined here
  --> $DIR/async-ident-allowed.rs:3:9
   |
LL | #![deny(rust_2018_compatibility)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^
   = note: #[deny(keyword_idents)] implied by #[deny(rust_2018_compatibility)]
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: aborting due to previous error

